--- a/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalThreeDimensionalViewSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/AnalyticalThreeDimensionalViewSettingsControl.xaml
@@ -8,11 +8,32 @@
              d:DesignHeight="300" d:DesignWidth="450">
     <Grid>
         <GroupBox Header="Visiblity" Height="180" Margin="10,59,0,10.6" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="109">
+            <!-- 
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="5,5,5,5">
+                <Grid x:Name="grid">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MinWidth="80"></ColumnDefinition>
+                        <ColumnDefinition MinWidth="100"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <CheckBox x:Name="checkBox_Visibilty_Space" Grid.Row="0"  Grid.Column="0" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="checkBox_Visibilty_Space_Click"/>
+                    <CheckBox x:Name="checkBox_Visibilty_Panel" Grid.Row="1"  Grid.Column="0" Content="Panel" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="checkBox_Visibilty_Aperture" Grid.Row="2"  Grid.Column="0" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                    <Button x:Name="button_Color_Space" Grid.Row="0" Grid.Column="1" Content="Color" Click="button_Color_Space_Click"/>
+                    <Button x:Name="button_Color_Panel" Grid.Row="1" Grid.Column="1" Content="Color" Click="button_Color_Panel_Click"/>
+                    <Button x:Name="button_Color_Aperture" Grid.Row="2" Grid.Column="1" Content="Color" Click="button_Color_Panel_Click"/>
+                </Grid>
+            </ScrollViewer>
+            -->          
             <StackPanel>
-                <CheckBox x:Name="checkBox_Visibilty_Space" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="checkBox_Visibilty_Space_Click"/>
-                <CheckBox x:Name="checkBox_Visibilty_Panel" Content="Panel" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-            </StackPanel>
+                    <CheckBox x:Name="checkBox_Visibilty_Space" Content="Space" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="checkBox_Visibilty_Space_Click"/>
+                    <CheckBox x:Name="checkBox_Visibilty_Panel" Content="Panel" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            </StackPanel> 
         </GroupBox>
         <GroupBox x:Name="groupBox_ColorScheme" Header="Color Scheme" HorizontalAlignment="Stretch" Height="180" Margin="124,59,5,10.6" VerticalAlignment="Stretch">
             <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Left" Height="157" VerticalAlignment="Top" Width="301" Margin="0,0,0,-0.2"/>
