--- a/WPF/SAM.Analytical.UI.WPF/Controls/PanelAppearanceSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/PanelAppearanceSettingsControl.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="300">
+             d:DesignHeight="150" d:DesignWidth="300">
     <Grid>
-        <GroupBox Header="Element" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="180">
+        <GroupBox Header="Element" Margin="10,10,10,10" VerticalAlignment="Stretch" HorizontalAlignment="Left" >
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,20,0.4,-0.2">
                 <RadioButton x:Name="radioButton_Panel" Content="Panel" Height="30" Click="RadioButton_Click"/>
                 <RadioButton x:Name="radioButton_Construction" Content="Construction" Height="30" Click="RadioButton_Click"/>
