--- a/WPF/SAM.Analytical.UI.WPF/Controls/ApertureAppearanceSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/ApertureAppearanceSettingsControl.xaml
@@ -1,20 +1,22 @@
-﻿<UserControl x:Class="SAM.Analytical.UI.WPF.PanelAppearanceSettingsControl"
+﻿<UserControl x:Class="SAM.Analytical.UI.WPF.ApertureAppearanceSettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="300">
+             d:DesignHeight="200" d:DesignWidth="300">
     <Grid>
         <GroupBox Header="Element" Margin="10,10,10,10" VerticalAlignment="Stretch" HorizontalAlignment="Left" >
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,20,0.4,-0.2">
                 <RadioButton x:Name="radioButton_Default" Content="Default" Height="30" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_Aperture" Content="Aperture" Height="30" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_ApertureConstruction" Content="Aperture Construction" Height="30" Click="RadioButton_Click"/>
                 <RadioButton x:Name="radioButton_Panel" Content="Panel" Height="30" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_Construction" Content="Construction" Height="30" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_OpeningProperties" Content="Opening Properties" Height="30" Click="RadioButton_Click"/>
             </StackPanel>
         </GroupBox>
         <Label x:Name="label_ParameterName" Content="Parameter Name:" HorizontalAlignment="Left" Margin="170,20,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="comboBox_ParameterName" Margin="170,48,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ParameterName_SelectionChanged"/>
+        <ComboBox x:Name="comboBox_ParameterName" Margin="170,48,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ParameterName_SelectionChanged"/>            
     </Grid>
 </UserControl>
