--- a/WPF/SAM.Analytical.UI.WPF/Controls/SpaceAppearanceSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/SpaceAppearanceSettingsControl.xaml
@@ -5,16 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="300">
+             d:DesignHeight="200" d:DesignWidth="300">
     <Grid>
         <GroupBox Header="Element" Margin="10,10,140,10" VerticalAlignment="Top" HorizontalAlignment="Left">
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,20,0.4,-0.2">
+                <RadioButton x:Name="radioButton_Default" Content="Default" Height="30" Click="RadioButton_Click"/>
                 <RadioButton x:Name="radioButton_Space" Content="Space" Height="30" Click="RadioButton_Click"/>
                 <RadioButton x:Name="radioButton_Zone" Content="Zone" Height="30" Click="RadioButton_Click" IsChecked="True"/>
                 <RadioButton x:Name="radioButton_InternalCondition" Content="Internal Condition" Height="30" Click="RadioButton_Click"/>
             </StackPanel>
         </GroupBox>
-        <Label Content="Parameter Name:" HorizontalAlignment="Left" Margin="170,20,0,0" VerticalAlignment="Top"/>
+        <Label  x:Name="label_ParameterName" Content="Parameter Name:" HorizontalAlignment="Left" Margin="170,20,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="comboBox_ParameterName" Margin="170,48,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ParameterName_SelectionChanged"/>
         <Label x:Name="label_ZoneType" Content="Zone Type:" HorizontalAlignment="Left" Margin="170,87,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="comboBox_ZoneCategory" Margin="170,115,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ZoneCategory_SelectionChanged"/>
