--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:geometry="clr-namespace:SAM.Geometry.UI.WPF;assembly=SAM.Geometry.UI.WPF"
         mc:Ignorable="d"
         WindowState="Maximized"
-        WindowStyle="SingleBorderWindow" d:DesignWidth="800" d:DesignHeight="600" KeyDown="Window_KeyDown">
+        WindowStyle="SingleBorderWindow" d:DesignWidth="800" d:DesignHeight="600" KeyDown="Window_KeyDown" Closing="Window_Closing">
     <Window.Resources>
         <Style TargetType="RibbonButton">
             <Setter Property="Template">
@@ -422,6 +422,7 @@
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_View_Visibility" Header="Visiblity">
                     <RibbonButton x:Name="RibbonButton_RevealHidden" Label="Reveal Hidden" />
+                    <RibbonButton x:Name="RibbonButton_ViewRange" Label="View Range" />
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Edit" Header="Edit">
