--- a/WPF/SAM.Analytical.UI.WPF/Controls/BatchCreateViewsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/BatchCreateViewsControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="350">
+             d:DesignHeight="550" d:DesignWidth="350">
     <Grid>
         <GroupBox Header="Visiblity" Margin="237,10,10.4,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="215">
             <StackPanel Margin="0,0,-2,0">
@@ -14,8 +14,8 @@
                 <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Margin="10,245,10.4,28.6" VerticalAlignment="Stretch">
-            <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Left" Height="157" VerticalAlignment="Top" Width="301" Margin="0,0,0,-0.2"/>
+        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Margin="10,245,10.4,5" VerticalAlignment="Stretch">
+            <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="301" Margin="5,5,5,5"/>
         </GroupBox>
         <ListBox x:Name="listBox_Levels" HorizontalAlignment="Left" Height="157" Margin="10,35,0,0" VerticalAlignment="Top" Width="217" SelectionMode="Multiple"/>
         <Label Content="Levels:" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top"/>
