--- a/WPF/SAM.Analytical.UI.WPF/Windows/AssignMechanicalSystemsWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AssignMechanicalSystemsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
-        Title="Mechanical Systems" Height="450" Width="450">
+        Title="Mechanical Systems" Height="450" Width="450" Topmost="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="64*"></RowDefinition>
