--- a/WPF/SAM.Analytical.UI.WPF/Windows/AddMechanicalSystemsWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AddMechanicalSystemsWindow.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
         <local:AddMechanicalSystemsControl x:Name="AddMechanicalSystemsControl_Main" Grid.Row="0" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></local:AddMechanicalSystemsControl>
-        <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10"></Button>
-        <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,11,84.6,10" HorizontalAlignment="Right" Width="70"/>        
+        <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10" Click="button_Cancel_Click"></Button>
+        <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,11,84.6,10" HorizontalAlignment="Right" Width="70" Click="button_OK_Click"/>        
     </Grid>
 </Window>
