--- a/WPF/SAM.Analytical.UI.WPF/Windows/SimulateWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/SimulateWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SAM.Analytical.UI.WPF.ConvertToTBDWindow"
+﻿<Window x:Class="SAM.Analytical.UI.WPF.SimulateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Height="auto" Width="auto" Grid.ColumnSpan="2" Margin="0,0,0,29.8" Grid.RowSpan="2" >
-            <local:ConvertToTBDControl x:Name="convertToTBDControl" Grid.Row="0" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="341" FontFamily="Roboto Light"></local:ConvertToTBDControl>
+            <local:SimulateControl x:Name="simulateControl" Grid.Row="0" Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="341" FontFamily="Roboto Light"></local:SimulateControl>
         </StackPanel>
         <Button x:Name="button_OK" Grid.Row="1" Width="60" Height="20" Margin="0,0,80,3.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="button_OK_Click" Grid.ColumnSpan="2">OK</Button>
         <Button x:Name="button_Cancel" IsCancel="True" Grid.Row="1" Grid.Column="1" Width="60" Height="20" Margin="0,0,10,3.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="button_Cancel_Click">Cancel</Button>
