SimulateControl and SimulateWindow Updated

--- a/WPF/SAM.Analytical.UI.WPF/Controls/SimulateControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/SimulateControl.xaml
@@ -14,31 +14,39 @@
         <TextBox x:Name="textBox_OutputDirectory" HorizontalAlignment="Stretch" Height="35" Margin="10,96,68.4,0" TextWrapping="Wrap" Text="C:\Users\DengusiakM\Desktop\SAM\2023-01-04_SAM_UI" VerticalAlignment="Top"/>
         <Button x:Name="button_OutputDirectory" Content="..." HorizontalAlignment="Right" Margin="0,96,10.4,0" VerticalAlignment="Top" Width="53" Height="23" RenderTransformOrigin="0.504,0.5" Click="button_OutputDirectory_Click"/>
         <Label Content="Weather Data:" HorizontalAlignment="Left" Margin="10,131,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox_Sizing" Content="Sizing" HorizontalAlignment="Left" Margin="10,0,0,160" VerticalAlignment="Bottom"/>
-        <CheckBox x:Name="checkBox_CreateSAP" Content="Create SAP" HorizontalAlignment="Left" Margin="217,0,0,185" VerticalAlignment="Bottom" Click="checkBox_CreateSAP_Click"/>
-        <CheckBox x:Name="checkBox_CreateTM59" Content="Domestic Overheating" HorizontalAlignment="Left" Margin="10,0,0,134" VerticalAlignment="Bottom" Click="checkBox_CreateTM59_Click"/>
-        <CheckBox x:Name="checkBox_UseWidths" Content="Use Widths" HorizontalAlignment="Left" Margin="10,0,0,185" VerticalAlignment="Bottom"/>
-        <CheckBox x:Name="checkBox_CreateTPD" Content="Create TPD" HorizontalAlignment="Left" Margin="217,0,0,160" VerticalAlignment="Bottom"/>
-        <CheckBox x:Name="checkBox_CreatePartL" Content="Create Part L" HorizontalAlignment="Left" Margin="217,0,0,134" VerticalAlignment="Bottom"/>
-        <Label x:Name="label_TextMap"  Content="Text Map:" HorizontalAlignment="Left" Margin="10,0,0,35.6" VerticalAlignment="Bottom"/>
-        <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_TextMap" HorizontalAlignment="Stretch" Margin="10,0,10.4,13.6" VerticalAlignment="Bottom" Height="22"/>
+        <CheckBox x:Name="checkBox_RoomDataSheets" Content="Print Room Data Sheets (RDS)" HorizontalAlignment="Left" Margin="30,425,0,0" VerticalAlignment="Top"/>
+
+        <CheckBox x:Name="checkBox_CreatePartL" Content="Create Part L" HorizontalAlignment="Left" Margin="30,450,0,0" VerticalAlignment="Top"/>
+
         <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_WeatherData" HorizontalAlignment="Stretch" Margin="10,157,10.4,0" VerticalAlignment="Top" Height="22"/>
-        <ComboBox x:Name="comboBox_ZoneCategory" HorizontalAlignment="Stretch" Margin="10,0,10.4,67" VerticalAlignment="Bottom"/>
-        <Label x:Name="label_ZoneCategory"  Content="Zone Category:" HorizontalAlignment="Left" Margin="10,0,0,89" VerticalAlignment="Bottom"/>
-        <GroupBox Header="Simulation" Height="213" Margin="10,184,10,0" VerticalAlignment="Top">
-            <Grid Height="193">
+
+        <GroupBox Height="223" Margin="10,184,10,0" VerticalAlignment="Top">
+            <GroupBox.Header>
                 <CheckBox x:Name="checkBox_Simulate" Content="Simulate" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="checkBox_Simulate_Click"/>
-                <Label x:Name="label_SolarCalculationMethod" Content="Solar Calculation Method:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
-                <ComboBox x:Name="comboBox_SolarCalculationMethod" HorizontalAlignment="Stretch" Margin="10,71,10.4,0" VerticalAlignment="Top"/>
-                <CheckBox x:Name="checkBox_FullYearSimulation" Content="Full Year Simulation" HorizontalAlignment="Left" Margin="10,0,0,70" VerticalAlignment="Bottom" Checked="checkBox_FullYearSimulation_Checked" Unchecked="checkBox_FullYearSimulation_Unchecked"/>
-                <CheckBox x:Name="checkBox_UnmetHours" Content="Unmet Hours" HorizontalAlignment="Left" Margin="10,0,0,40" VerticalAlignment="Bottom"/>
-                <CheckBox x:Name="checkBox_RoomDataSheets" Content="Print Room Data Sheets (RDS)" HorizontalAlignment="Left" Margin="10,0,0,11" VerticalAlignment="Bottom"/>
-                <Label x:Name="label_FullYearSimulation_From" Content="From:" HorizontalAlignment="Left" Margin="155,101,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="textBox_FullYearSimulation_From" HorizontalAlignment="Left" Height="23" Margin="200,104,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="30" PreviewTextInput="textBox_FullYearSimulation_From_PreviewTextInput"/>
-                <Label  x:Name="label_FullYearSimulation_To" Content="To:" HorizontalAlignment="Left" Margin="233,102,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="textBox_FullYearSimulation_To" HorizontalAlignment="Left" Height="23" Margin="262,105,0,0" TextWrapping="Wrap" Text="365" VerticalAlignment="Top" Width="30" PreviewTextInput="textBox_FullYearSimulation_To_PreviewTextInput"/>
+            </GroupBox.Header>
+            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,5,0,5">
+                <Label x:Name="label_SolarCalculationMethod" Content="Solar Calculation Method:" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+                <ComboBox x:Name="comboBox_SolarCalculationMethod" Margin="10,60,10,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="checkBox_FullYearSimulation" Content="Full Year Simulation" HorizontalAlignment="Left" Margin="13,115,0,0" VerticalAlignment="Top" Checked="checkBox_FullYearSimulation_Checked" Unchecked="checkBox_FullYearSimulation_Unchecked"/>
+                <CheckBox x:Name="checkBox_UnmetHours" Content="Unmet Hours" HorizontalAlignment="Left" Margin="13,135,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="checkBox_CreateTPD" Content="Create TPD" HorizontalAlignment="Left" Margin="13,155,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="checkBox_Sizing" Content="Sizing" HorizontalAlignment="Left" Margin="13,95,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="checkBox_UseWidths" Content="Use Widths" HorizontalAlignment="Left" Margin="13,10,0,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_FullYearSimulation_From" Content="From:" HorizontalAlignment="Left" Margin="171,109,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="textBox_FullYearSimulation_From" HorizontalAlignment="Left" Height="23" Margin="216,109,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="30" PreviewTextInput="textBox_FullYearSimulation_From_PreviewTextInput"/>
+                <Label  x:Name="label_FullYearSimulation_To" Content="To:" HorizontalAlignment="Left" Margin="249,109,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="textBox_FullYearSimulation_To" HorizontalAlignment="Left" Height="23" Margin="278,109,0,0" TextWrapping="Wrap" Text="365" VerticalAlignment="Top" Width="30" PreviewTextInput="textBox_FullYearSimulation_To_PreviewTextInput"/>
             </Grid>
         </GroupBox>
-
+        <GroupBox Margin="10,480,10,0" VerticalAlignment="Top" Height="140">
+            <Grid>
+                <CheckBox x:Name="checkBox_CreateSAP" Content="Create SAP" HorizontalAlignment="Left" Margin="204,10,0,0" VerticalAlignment="Top" Click="checkBox_CreateSAP_Click"/>
+                <CheckBox x:Name="checkBox_CreateTM59" Content="Domestic Overheating" HorizontalAlignment="Left" Margin="13,10,0,0" VerticalAlignment="Top" Click="checkBox_CreateTM59_Click"/>
+                <Label x:Name="label_TextMap"  Content="Text Map:" HorizontalAlignment="Left" Margin="10,0,0,35.6" VerticalAlignment="Bottom"/>
+                <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_TextMap" HorizontalAlignment="Stretch" Margin="10,0,10.4,13.6" VerticalAlignment="Bottom" Height="22"/>
+                <ComboBox x:Name="comboBox_ZoneCategory" Margin="10,51,10,0" VerticalAlignment="Top"/>
+                <Label x:Name="label_ZoneCategory"  Content="Zone Category:" HorizontalAlignment="Left" Margin="10,0,0,81" VerticalAlignment="Bottom"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
